# xengine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/engine/component/: component.h  sprite_component.cpp  sprite_component.h  transform_component.cpp  transform_component.h
src/engine/core/: config.cpp  config.h  context.cpp  context.h  game.cpp  game.h  time.cpp  time.h
src/engine/input/: input_manager.cpp
src/engine/object/: game_object.cpp  game_object.h
src/engine/render/: camera.cpp  camera.h  renderer.cpp  renderer.h  sprite.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/utils/: math.h
test/: main.cpp
